# skillometer-api

./: .env.development  .env.example  .env.testing  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.builder.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml  pytest.ini
app/: main.py
app/api/: main.py
app/core/: config.py  db.py  errors.py  exceptions.py  settings.py  types.py
app/core/db/: __init__.py  base.py  db_models.py
app/core/file_storage/: FileStorageService.py
app/core/iam/: main.py  schemas.py  secrets.py
app/core/logger/: main.py
app/fixtures/: dict_city.json  dict_division.json  dict_employment_type.json  dict_qualification.json  dict_search_status.json  dict_skill.json
app/migrations/: env.py
app/migrations/versions/: 2024-06-06T18:31_ba3dd98a2366_setup_vacancy_with_dicts.py  2024-06-06T19:08_919d2df7f11c_setup_vacancy.py  2024-06-06T19:15_c2305302e377_fix_city_dict_structure.py  2024-06-07T13-49_3f1c801876e3_vacancy_with_dict.py  2024-06-07T13:49_3f1c801876e3_vacancy_with_dict.py  2024-06-08T03-05_7fd52c7442e7_applicant.py  2024-06-08T14-35_32ecd20cdf03_name_vacancy.py  2024-06-08T14:35_32ecd20cdf03_name_vacancy.py  2024-06-08T17-17_f452c1e77f74_init_replies.py  2024-06-08T17:17_f452c1e77f74_init_replies.py  2024-06-08T18-03_c12d45f876a7_fix_nullable_in_reply.py  2024-06-08T18:03_c12d45f876a7_fix_nullable_in_reply.py  2024-06-08T20-24_b2997ab53d88_add_column_to_division.py  2024-06-11T15-59_a075af452232_user_synced_with_iam.py  2024-06-11T18-06_b562d22d8dcf_add_relationship_between_user_and_.py  2024-06-12T12-56_013a8e148111_add_applicant_education.py  2024-06-12T15-40_ca7b9f7b1f41_update_reply_field_rules.py  2024-06-12T17-49_6fea0d8c669f_group_to_skills.py  2024-06-13T11-27_17b54373c550_add_reply_reason.py  2024-06-13T15-37_e367e69b6a66_add_relationship_applicant_to_xp.py  2024-06-13T16-07_eb4cbcbd26cf_add_relationship_applicant_to_education.py  2024-06-14T19-34_c9f85cbed00d_dump_vacancy_name_to_reply.py  2024-06-15T12-36_1fc9b9bbfa25_comment_user_reply.py  2024-06-16T01-15_9bf39bf32f89_add_chat.py  2024-06-16T11-43_a63dabd6320f_reply_add_chat_id.py  2024-06-16T15-39_d694c22fa28f_create_event_and_reply_activity.py  2024-06-16T17-07_0fd8f6d06be3_fix_event_reply_relation.py
app/scripts/: load_fixtures.py  pre_start.py
app/services/applicant/: api.py  applicant.json  db_models.py  schemas.py
app/services/chat/: api.py  const.py  db_models.py  schemas.py
app/services/company/: api.py  db_models.py
app/services/cv/: api.py  main.py  schemas.py  test.json
app/services/dict/: api.py  const.py  db_models.py  schemas.py
app/services/event/: api.py  db_models.py  schemas.py
app/services/processing/: main.py  schemas.py  status_mapper.py
app/services/reply/: api.py  db_models.py  schemas.py
app/services/reply_activity/: const.py  db_models.py  (+1 more)
app/templates/: index.html  login.html
app/utils/: api_utils.py  database_utils.py  iam_utils.py
provision/deployment/: ingress.yaml  values.yaml
tests/: conftest.py  test_app.py  test_vacancy_crud.py
tests/crud/: test_reply.py  test_reply_activity.py  test_users.py  test_vacancy.py
tests/e2e/: change_status.http  http-client.private.env.json
(+17 files in other folders)
