[tool.poetry]
name = "skillometer-api"
version = "0.1.0"
description = "Service for recruiters and applicants"
authors = ["Ilya Zhuravlev <ichirozcom@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = {extras = ["email"], version = "^2.7.3"}
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic-settings = "^2.3.1"
alembic = "^1.13.1"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
structlog = "^24.2.0"
shortuuid = "^1.0.13"

[tool.poetry.group.debug]
optional = true

[tool.poetry.group.debug.dependencies]
debugpy = "^1.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
