[tool.poetry]
name = "Skillometer"
version = "0.2.2"
description = "Service for recruiters and applicants"
authors = ["Ilya Zhuravlev <ichirozcom@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = {extras = ["email"], version = "^2.7.3"}
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic-settings = "^2.3.1"
alembic = "^1.13.1"
sqlalchemy = "^2.0.30"
structlog = "^24.2.0"
shortuuid = "^1.0.13"
casdoor = "^1.24.0"
itsdangerous = "^2.2.0"
toml = "^0.10.2"
arrow = "^1.3.0"
boto3 = "^1.34.124"
sqlalchemy-utils = "^0.41.2"
psycopg2-binary = "^2.9.9"
tenacity = "^8.3.0"
orjson = "^3.10.5"

[tool.poetry.group.debug]
optional = true

[tool.poetry.group.debug.dependencies]
debugpy = "^1.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest-dotenv = "^0.5.2"
factory-boy = "^3.3.0"
faker = "^25.8.0"
pytest-alembic = "^0.11.0"
pytest-clarity = "^1.0.1"
pytest-randomly = "^3.15.0"
pytest-sugar = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# === Pytest ===
[tool.pytest.ini_options]
markers = [
    'debug: marks tests as debug (deselect with -m "not debug")',
]
#addopts = """\
#--maxfail=1
#-rf
#--test-alembic
#--randomly-dont-reset-seed
#"""
norecursedirs = ["venv", ".venv", ".env", "migrations",]
testpaths = ["tests",]
python_files = ["test*.py", "*test.py"]
python_functions = ["*_test", "test_*"]
console_output_style = "progress"
asyncio_mode = "auto"
log_cli = true
pytest_alembic_tests_folder = "tests/migrations"
